# thonny-pseudocode

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
thonnycontrib/pseudocode/: __init__.py  plugin.py  utils.py
