[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'thonny-pseudocode'
version = '0.1.4'
authors = [
  { name='Raja Soufi', email='rjsoufi@gmail.com' },
]
description = 'A Thonny plugin that generates inline pseudocode explaining the Python source code line-by-line.'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Environment :: Plugins',
    'Topic :: Education',
    'Intended Audience :: Education',
    'Topic :: Text Editors',
    'Topic :: Text Editors :: Integrated Development Environments (IDE)'
]
dependencies = [
    'thonny >= 4.1.0',
]

[tool.setuptools.packages.find]
where = ['.']
include = ['thonnycontrib*']
exclude = [
    'thonnycontrib.pseudocode.pytopseu.node_modules*',
    'thonnycontrib.pseudocode.pytopseu.sample_src*',
    'thonnycontrib.pseudocode.pytopseu.tools*'
]

[tool.setuptools.package-data]
'thonnycontrib.pseudocode' = ['**/*.png']
